--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -352,7 +352,7 @@
                         {
                             <tr class="row-content" style="vertical-align: middle; text-align: center;">
                                 <td>
-                                    <input type="checkbox" ID="Carton_Select_[@i]" class="messageCheckbox" Idx=@i CTNNo=@Model.SelectCarton[i].CTNNo PackingListID=@Model.SelectCarton[i].PackingListID shipQty="@Model.SelectCarton[i].ShipQty" OrderID=@Model.SelectCarton[i].OrderID onclick="SelectCartonChange(this)" style="width: 1.4em;" />
+                                    <input type="checkbox" ID="Carton_Select_[@i]" class="messageCheckbox" Idx=@i CTNNo=@Model.SelectCarton[i].CTNNo PackingListID=@Model.SelectCarton[i].PackingListID shipQty="@Model.SelectCarton[i].ShipQty" OrderID=@Model.SelectCarton[i].OrderID Seq=@Model.SelectCarton[i].Seq onclick="SelectCartonChange(this)" style="width: 1.4em;" />
                                 </td>
                                 <td>
                                     @Html.DisplayFor(o => Model.SelectCarton[i].PackingListID)
@@ -487,47 +487,66 @@
         var msg = new MessagerAlert();
 
         // 摺疊資料需先轉成array
-        var adata = [];
-        var bdata = [];
-        var SelectedPOs =[];
+        var poData = [];
+        var sewingData = [];
+        var shipModeSeqData = [];
+        var SelectedPOs = [];
+        var SelectedSeqs = [];
         var index = 0;
         var index2 = 0;
+        var index3 = 0;
         var currentStage = '';
         var Order_AvailableQty = {};
         var table;
         @foreach (var item in Model.SelectedPO)
         {
-            @:adata.push([null, '@item.OrderID', index, '@item.CustPONO', '@item.StyleID', '@item.SeasonID', '@item.BrandID', @item.Qty, '@item.Cartons',@item.AvailableQty, '@item.SeasonID', '@item.Seq', '@item.Article',@item.MetalContaminateQty]);
+            @:poData.push([null, '@item.OrderID', index, '@item.CustPONO', '@item.StyleID', '@item.SeasonID', '@item.BrandID', @item.Qty, '@item.Cartons',@item.AvailableQty, '@item.SeasonID', '@item.Seq', '@item.Article',@item.MetalContaminateQty]);
             @:index = index + 1;
         }
         @foreach (var item in Model.SelectedSewing)
         {
-            @:bdata.push([null, '@item.SewingLine', index2]);
+            @:sewingData.push([null, '@item.SewingLine', index2]);
             @:index2 = index2 + 1;
         }
 
+        @foreach (var item in Model.SelectOrderShipSeq)
+        {
+            @:shipModeSeqData.push(['@item.OrderID', '@item.Seq', @item.Qty]);
+            @:index3 = index3 + 1;
+        }
         $(function () {
 
             @Html.Raw(Model.ErrorMessage);
 
-            for (var i = 0; i < adata.length; i++) {
+            for (var i = 0; i < poData.length; i++) {
                 var obj = {
-                    OrderID: adata[i][1],
-                    Rowindex: adata[i][2],
-                    CustPONO: adata[i][3],
-                    StyleID: adata[i][4],
-                    SeasonID: adata[i][5],
-                    BrandID: adata[i][6],
-                    OrderQty: adata[i][7],
-                    Cartons: adata[i][8],
-                    AvailableQty: adata[i][9],
-                    Seq: adata[i][11],
-                    Article: adata[i][12],
-                    MetalContaminateQty: adata[i][13],
+                    OrderID: poData[i][1],
+                    Rowindex: poData[i][2],
+                    CustPONO: poData[i][3],
+                    StyleID: poData[i][4],
+                    SeasonID: poData[i][5],
+                    BrandID: poData[i][6],
+                    OrderQty: poData[i][7],
+                    Cartons: poData[i][8],
+                    AvailableQty: poData[i][9],
+                    Seq: poData[i][11],
+                    Article: poData[i][12],
+                    MetalContaminateQty: poData[i][13],
 
                 };
                 SelectedPOs.push(obj);
             }
+
+            for (var i = 0; i < shipModeSeqData.length; i++) {
+                var obj = {
+                    OrderID: shipModeSeqData[i][0],
+                    Seq: shipModeSeqData[i][1],
+                    Qty: shipModeSeqData[i][2],
+
+                };
+                SelectedSeqs.push(obj);
+            }
+
 
             $("#SewingLineID").on('click', function () {
                 //window.open('@Url.Action("SewingLineList", "PublicWindow",new { Area=""})' + '?FactoryID=@ViewBag.FactoryID', 'SewingLineList', config = 'toolbar=no,status=no,location=no,width=400,height=650' );
@@ -537,7 +556,7 @@
 
 
             table = $('#SelectedPOTable').DataTable({
-                    data: adata,
+                    data: poData,
                     autoWidth: false,
                     destroy: true,
                     columnDefs: [
@@ -611,7 +630,16 @@
                 if (Column == "AvailableQty") {
 
                     table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = $(this).find("input").val();
-                    Order_AvailableQty[orderID] = $(this).find("input").val();
+                    //Order_AvailableQty[orderID] = $(this).find("input").val();
+                    var qty = $(this).find("input").val();
+                    var allSeq = $(this).parent().parent().find("input[col='ShipmodeSeq']").val();
+                    var seqList = allSeq.split(',');
+                    $.each(seqList, function () {
+                        var seq = this;
+                        Order_AvailableQty[orderID + '-' + seq] = parseInt(qty);
+
+                    });
+
                     Cacu_AvailableQty();
                 }
                 if (Column == "ShipmodeSeq") {
@@ -737,6 +765,7 @@
                     "1": {
                         text: 'Next',
                         click: function () {
+
                             //Select Carton視窗按下Next
                             var checkedList = [];
                             var totalQty = 0;
@@ -744,18 +773,43 @@
                             // 清空箱號選取，並觸發重新搜尋的event，把所有箱號都show出來
                             $("#CTNSearch").val('').keyup();
 
+                            // 重置
+                            if ($('[id^=Carton_Select_]').length > 0 && currentStage != 'Final') {
+                                var allKeys = Object.keys(Order_AvailableQty);
+                                var sp = $($('[id^=Carton_Select_]')[0]).attr("orderid");
+                                $.each(allKeys, function () {
+                                    var key = this;
+                                    var tOrderID = key.split('-')[0];
+                                    var tSeq = key.split('-')[1];
+                                    if (tOrderID == sp) {
+                                        Order_AvailableQty[key] = 0;
+                                    }
+                                });
+                            }
+
+
+                            
                             // 根據Checkbox有沒有勾選，來調整input hidden的值。這個input才有Binding Model
                             $('[id^=Carton_Select_]').each(function () {
 
                                 var idx = $(this).attr("idx");
+                                var selectedOrderID = $(this).attr("OrderID");
+                                var selectedSeq = $(this).attr("Seq");
+                                var shipQty = parseInt($(this).attr("ShipQty"));
+
                                 if ($(this).prop('checked')) {
 
                                     checkedList.push($(this).attr("ctnno"));
-                                    totalQty = totalQty + parseInt($(this).attr("ShipQty"));
+
+                                    if (currentStage != 'Final') {
+                                        totalQty = totalQty + shipQty;
+                                        Order_AvailableQty[selectedOrderID + '-' + selectedSeq] = totalQty;
+                                    }
 
                                     $(`#SelectCarton_${idx}__Selected`).val(true);
                                 }
                                 else {
+
                                     $(`#SelectCarton_${idx}__Selected`).val(false);
                                 }
                             });
@@ -764,6 +818,8 @@
                             document.getElementById("SelectedPO[" + index + "].Cartons").value = checkedList.join(',');
 
                             var orderID = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderId");
+                            //var seqList = document.getElementById("SelectedPO[" + index + "].Seq").value;
+                            //var seq = seqList.split(',');
 
                             //Stage != 'Final'才需要從Carton帶入數量，否則帶入OrderQty
                             if (currentStage != 'Final') {
@@ -771,15 +827,17 @@
                                 document.getElementById("SelectedPO[" + index + "].AvailableQty").value = totalQty;
 
                                 table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = totalQty;
-                                Order_AvailableQty[orderID] = totalQty;
+
+                                //Order_AvailableQty[orderID + '-' + seq] = totalQty;
                             }
                             else {
                                 var OrderQty = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderQty");
                                 table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = parseInt(OrderQty);
-                                Order_AvailableQty[orderID] = OrderQty;
+                                //Order_AvailableQty[orderID] = OrderQty;
                             }
 
                             Cacu_AvailableQty();
+                            //Cacu_AvailableQty(orderID, seq);
 
                             $(this).dialog("close");
                         }
@@ -799,13 +857,24 @@
                         click: function () {
 
                             var checkedList = [];
+                            var checkedOrderIDList = [];
                             var totalQty = 0;
                             $('[id^=ShipmodeSeq_Select_]').each(function () {
 
+                                var seq = $(this).attr("seq");
+                                var orderID = $(this).attr("OrderID");
+                                var qty = $(this).attr("Qty");
+
                                 if ($(this).prop('checked')) {
-                                    //checkedList.push($(this).val());
-                                    totalQty = totalQty + parseInt($(this).attr("Qty"));
-                                    checkedList.push($(this).attr("seq"));
+
+                                    totalQty = totalQty + parseInt(qty);
+                                    checkedList.push(seq);
+                                    checkedOrderIDList.push(orderID);
+
+                                    Order_AvailableQty[orderID + '-' + seq] = parseInt(qty);
+                                }
+                                else {
+                                    Order_AvailableQty[orderID + '-' + seq] = 0;
                                 }
                             });
                             var index = $("#currnetSelectedShipmodeSeq").val();
@@ -816,6 +885,8 @@
                             }
 
                             document.getElementById("SelectedPO[" + index + "].Seq").value = checkedList.join(',');
+                            document.getElementById("SelectedPO[" + index + "].AvailableQty").value = totalQty;
+                            $("#totalAvailableQty").text(totalQty);
 
                             $(this).dialog("close");
                         }
@@ -964,7 +1035,7 @@
                             $('#settingForm > div > div:nth-child(5) > table > tbody > tr:nth-child(n + 3)').remove()
                             $('#settingForm > div > div:nth-child(5) > table > tbody').append(html);
                             $('#AcceptableQualityLevelsProUkey').val($('#ProUkey').val());
-                            
+
                         }
                     })
                 }
@@ -1141,7 +1212,7 @@
                 $(this).prop('checked', false);
             });
 
-            $(adata).each(function (index, element) {
+            $(poData).each(function (index, element) {
                 var orderID = element[1];
                 var CustPONO = element[3];
                 if (orderID == findValue[0] && CustPONO == findValue[1]) {
@@ -1217,7 +1288,7 @@
                 $(this).prop('checked', false);
             });
 
-            $(adata).each(function (index, element) {
+            $(poData).each(function (index, element) {
                 var orderID = element[1];
                 var CustPONO = element[3];
                 if (orderID == findValue[0] && CustPONO == findValue[1]) {
@@ -1292,7 +1363,7 @@
                 $(this).prop('checked', false);
             });
 
-            //$(bdata).each(function (index, element) {
+            //$(sewingData).each(function (index, element) {
             //    var sewingline = element[1];
             //    if (sewingline == findValue[0]) {
             //        rowIndex = element[2];
@@ -1409,7 +1480,17 @@
                     var orderQty = obj.OrderQty;;
                     //index9是AvailableQty
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[9] = orderQty;
-                    Order_AvailableQty[orderID] = orderQty;
+                    //Order_AvailableQty[orderID] = orderQty;
+                    var allKeys = Object.keys(Order_AvailableQty);
+
+                    $.each(allKeys, function () {
+                        var key = this;
+                        var tOrderID = key.split('-')[0];
+                        var tSeq = key.split('-')[1];
+                        if (tOrderID == orderID) {
+                            Order_AvailableQty[key] = parseInt(orderQty);;
+                        }
+                    });
 
                     ////index 11是Shipmode seq
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[11] = '';
@@ -1417,15 +1498,26 @@
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[8] = '';
                 });
 
+                $.each(SelectedSeqs, function () {
+                    var obj = this;
+                    var orderID = obj.OrderID;;
+                    var seq = obj.Seq;;
+                    var qty = obj.Qty;;
+
+                    Order_AvailableQty[orderID +'-' + seq] = qty;
+                });
+
                 // 如果[Selected PO]區塊有展開，透過以下方式Bind AvailableQty資料
                 $.each(availableQtycheck, function () {
                     var orderQty = $($(this)[0]).attr("orderQty");
                     var orderID = $($(this)[0]).attr("orderID");
+                    var seq = $($(this)[0]).attr("Seq");
+
                     $($(this)[0]).val(orderQty);
                     $($(this)[0]).attr("readonly", "readonly");
                     //index9是AvailableQty
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[9] = orderQty;
-                    Order_AvailableQty[orderID] = orderQty;
+                    Order_AvailableQty[orderID + '-' + seq] = parseInt(orderQty);
 
                     ////index 11是Shipmode seq
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[11] = '';
@@ -1433,6 +1525,7 @@
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[8] = '';
                 });
                 Cacu_AvailableQty();
+                //Cacu_AvailableQty(orderID, seq);
             }
             else {
                 // 如果不是Final則清空ShipModeSeq、Carton、Available Qty
@@ -1444,7 +1537,17 @@
 
                     //index9是AvailableQty
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[9] = 0;
-                    Order_AvailableQty[orderID] = 0;
+                    //Order_AvailableQty[orderID] = 0;
+                    var allKeys = Object.keys(Order_AvailableQty);
+
+                    $.each(allKeys, function () {
+                        var key = this;
+                        var tOrderID = key.split('-')[0];
+                        var tSeq = key.split('-')[1];
+                        if (tOrderID == orderID) {
+                            Order_AvailableQty[key] = 0;
+                        }
+                    });
 
                     //index 11是Shipmode seq
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[11] = '';
@@ -1452,15 +1555,35 @@
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[8] = '';
                 });
 
+                $.each(SelectedSeqs, function () {
+                    var obj = this;
+                    var orderID = obj.OrderID;;
+                    var seq = obj.Seq;;
+                    var qty = obj.Qty;;
+
+                    Order_AvailableQty[orderID + '-' + seq] = qty;
+                });
+
                 // 如果[Selected PO]區塊有展開，透過以下方式Bind AvailableQty資料
                 $.each(availableQtycheck, function () {
                     var orderID = $($(this)[0]).attr("orderID");
+                    var seq = $($(this)[0]).attr("Seq");
                     $($(this)[0]).removeAttr("readonly");
                     $($(this)[0]).val(0);
 
+                    var allKeys = Object.keys(Order_AvailableQty);
+
                     //index9是AvailableQty
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[9] = 0;
-                    Order_AvailableQty[orderID] = 0;
+                    //Order_AvailableQty[orderID] = 0;
+                    $.each(allKeys, function () {
+                        var key = this;
+                        var tOrderID = key.split('-')[0];
+                        var tSeq = key.split('-')[1];
+                        if (tOrderID == orderID) {
+                            Order_AvailableQty[key] = 0;
+                        }
+                    });
 
                     //index 11是Shipmode seq
                     table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[11] = '';
@@ -1471,6 +1594,7 @@
 
 
                 Cacu_AvailableQty();
+                //Cacu_AvailableQty(orderID, seq);
             }
             /* ISP20211490 拔掉
 
